objects/npe01__Contacts_And_Orgs_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Application settings for the Contacts and Organizations package of the Nonprofit Success Pack</description>
    <fields>
        <fullName>npe01__Account_Processor__c</fullName>
        <defaultValue>&quot;Household Account&quot;</defaultValue>
        <description>Setting for the Account model. Should be &quot;Household Account&quot;, &quot;One-to-One&quot;, or &quot;Individual&quot;. Replaces the custom field Contact.SystemAccountProcessor__c.  &quot;Household Account&quot; is the recommended model.</description>
        <inlineHelpText>Setting for the Account model. Should be &quot;Household Account&quot;, &quot;One-to-One&quot;, or &quot;Individual&quot;. Replaces the custom field Contact.SystemAccountProcessor__c.  &quot;Household Account&quot; is the recommended model.</inlineHelpText>
        <label>Account Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__DISABLE_IndividualAccounts_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_IndividualAcc_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__DISABLE_OpportunityAccount_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_OppAccount_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__DISABLE_OpportunityContactRoles_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_OCR_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__DISABLE_OpportunityPayments_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_OppPayments_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Default_Opp_on_Convert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether to create an Opportunity during Lead conversion.</description>
        <inlineHelpText>Specifies whether to create an Opportunity during Lead conversion.</inlineHelpText>
        <label>Create Opportunity on Lead Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Disable_Account_Model_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable Account Model Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Enable_Opportunity_Contact_Role_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED.  Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Enable OppContactRole Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Enable_Update_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED.  New versions of the Nonprofit Starter Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Enable Update Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__HH_Account_RecordTypeID__c</fullName>
        <description>The ID of the Account Record Type to be used for Household Accounts. If none is selected, the Account will default to the user&apos;s default Account Record Type.</description>
        <inlineHelpText>The ID of the Account Record Type to be used for Household Accounts. If none is selected, the Account will default to the user&apos;s default Account Record Type.</inlineHelpText>
        <label>Household Account Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Has_Package_Update__c</fullName>
        <description>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED.  New versions of the Nonprofit Starter Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Has Package Update</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Last_Update_Check__c</fullName>
        <description>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED.  New versions of the Nonprofit Starter Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Last Update Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npe01__Max_Package_Version__c</fullName>
        <description>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED.  New versions of the Nonprofit Starter Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Max Package Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__One_to_One_RecordTypeID__c</fullName>
        <description>The ID of the Account Record Type to be used for One-to-One Accounts.  If none is selected, the Account will default to the user&apos;s default Account Record Type.</description>
        <inlineHelpText>The ID of the Account Record Type to be used for One-to-One Accounts.  If none is selected, the Account will default to the user&apos;s default Account Record Type.</inlineHelpText>
        <label>One-to-One Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Opportunity_Contact_Role_Default_role__c</fullName>
        <description>The default Contact Role automatically assigned to the Primary Contact for the Opportunity.</description>
        <inlineHelpText>The default role for the primary Opportunity Contact Role that gets automatically created.</inlineHelpText>
        <label>Default Opportunity Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Package_Update_URL__c</fullName>
        <description>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED.  New versions of the Nonprofit Starter Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Package Update URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>npe01__Payments_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled, Salesforce automatically creates Payments for new Opportunities (Donations).</description>
        <inlineHelpText>Enables automatic Payments created for new Opportunities/Donations.</inlineHelpText>
        <label>Automatic Payment Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Update_Check_Interval__c</fullName>
        <defaultValue>90</defaultValue>
        <description>DEPRECATED.  New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED.  New versions of the Nonprofit Starter Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Update Check Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Automatic_Campaign_Member_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically creates a Campaign Member when you create an Opportunity that has a Primary Contact and a Primary Campaign source associated with it, or update that Opportunity with a Closed/Won stage.</description>
        <inlineHelpText>Automatically creates a Campaign Member when you create an Opportunity that has a Primary Contact and a Primary Campaign source associated with it, or update that Opportunity with a Closed/Won stage.</inlineHelpText>
        <label>Automatic Campaign Member Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Campaign_Member_Non_Responded_Status__c</fullName>
        <description>The automatic Status of a Campaign Member for Open or Closed/Lost opportunities that have a Primary Contact and a Primary Campaign Source associated with them. If left blank, Salesforce uses the first non-Responded status.</description>
        <inlineHelpText>The automatic Status of a Campaign Member for Open or Closed/Lost opportunities that have a Primary Contact and a Primary Campaign Source associated with them. If left blank, Salesforce uses the first non-Responded status.</inlineHelpText>
        <label>Campaign Member Non Responded Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Campaign_Member_Responded_Status__c</fullName>
        <description>The automatic Status of the Campaign Member for Closed/Won opportunities that have a Primary Contact and a Primary Campaign Source associated with them. If left blank, Salesforce uses the first Responded status.</description>
        <inlineHelpText>The automatic Status of the Campaign Member for Closed/Won opportunities that have a Primary Contact and a Primary Campaign Source associated with them. If left blank, Salesforce uses the first Responded status.</inlineHelpText>
        <label>Campaign Member Responded Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Honoree_Opportunity_Contact_Role__c</fullName>
        <description>Populating this setting will automatically create a Contact Role for Opportunities with an honoree Contact. Leaving this field blank will disable automatic Contact Role creation for the honoree.</description>
        <inlineHelpText>Populating this setting will auto-create a contact role for opportunities with an honoree contact. Leaving this field blank will disable automatic contact role creation for the honoree.</inlineHelpText>
        <label>Honoree Opportunity Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Household_Account_Addresses_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables Address management for Household Accounts when selected.</description>
        <inlineHelpText>Disables Address management for Household Accounts when selected.</inlineHelpText>
        <label>Household Account Addresses Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Max_Payments__c</fullName>
        <defaultValue>12</defaultValue>
        <description>Determines the maximum number of payments available in the Payment Creation Wizard.</description>
        <inlineHelpText>Determines the maximum number of payments available in the Payment Creation Wizard.</inlineHelpText>
        <label>Max Payments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Notification_Recipient_Opp_Contact_Role__c</fullName>
        <description>Populating this setting will automatically create a Contact Role for Opportunities with a notification recipient Contact. Leaving this field blank will disable automatic Contact Role creation for the notification recipient.</description>
        <inlineHelpText>Populating this setting will auto-create a contact role for opportunities with a notification recipient contact. Leaving this field blank will disable automatic contact role creation for the notification recipient.</inlineHelpText>
        <label>Notification Recipient Opp Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Opp_RecTypes_Excluded_for_Payments__c</fullName>
        <description>Salesforce won&apos;t automatically create Payments for the selected Opportunity record types. Control or Command click to select more than one record type.</description>
        <inlineHelpText>Names of Opportunity Record Types to exclude from creating Payments</inlineHelpText>
        <label>Excluded Opp Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Opp_Types_Excluded_for_Payments__c</fullName>
        <description>Salesforce won&apos;t automatically create Payments for Opportunities that have this value in the Type picklist.</description>
        <inlineHelpText>Values for the Opportunity Type field to exclude from creating Payments.</inlineHelpText>
        <label>Excluded Opp Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Organizational_Account_Addresses_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables Address management for Organizational Accounts when selected.</description>
        <inlineHelpText>Enables Address management for Organizational Accounts when selected.</inlineHelpText>
        <label>Organizational Account Addresses Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Payments_Auto_Close_Stage_Name__c</fullName>
        <description>Salesforce automatically sets an Opportunity&apos;s Stage to this value when the Payment Amount Received is equal to the Opportunity Amount. If no stage is selected, the Opportunity Stage won&apos;t change when payments are complete.</description>
        <inlineHelpText>Choose the stage that an opportunity should be automatically transitioned to when the total payment amount is equal to the opportunity amount.  If no stage is selected, then opportunities will not be transitioned automatically when payments are complete.</inlineHelpText>
        <label>Opportunity Stage for When Fully Paid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Simple_Address_Change_Treated_as_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, changes to a single Contact or Account address field update the existing Address, rather than creating a new Address.</description>
        <inlineHelpText>If checked, changes to a single Contact or Account address field update the existing Address, rather than creating a new Address.</inlineHelpText>
        <label>Simple Address Change Treated as Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Contacts And Orgs Settings</label>
</CustomObject>